[package]
name = "super-optimiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
csv = "1.1.6"
rand = "0.8.4"
structopt = "0.3"


[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "cli"
path = "src/main.rs"
